Fix: responsiveness / layout issues

--- a/styles/global.css
+++ b/styles/global.css
@@ -55,11 +55,12 @@ header {
 }
 
 .logo-wrapper i {
-    font-size: 1.75em;
+    font-size: 1.75rem;
+    font-size: clamp(2rem, 2.5vw, 4rem);
 }
 
 .logo-wrapper p {
-    font-size: 20px;
+    font-size: clamp(1.0rem, 2vw, 2.0rem);
     font-weight: 700;
 }
 
@@ -71,6 +72,7 @@ header ul {
 }
 
 header ul li a {
+    font-size: clamp(1.0rem, 2vw, 2.0rem);
     text-decoration: none;
     font-weight: 600;
 }
