--- a/styles/index.css
+++ b/styles/index.css
@@ -29,11 +29,18 @@ main {
 }
 
 .latest-post-info-wrapper {
-    grid-column: 2 / 9;
+    grid-column: 2 / 11;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    /* max-width: 600px; */
+}
+
+.latest-post-info-wrapper .date {
+    font-size: clamp(1.0rem, 1.5vw, 1.5rem);
+}
+
+.latest-post-info-wrapper .title {
+    font-size: clamp(2rem, 3vw, 4rem);
 }
 
 /* OLDER POSTS */
@@ -54,13 +61,13 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1em;
 }
 
 .older-posts-info-wrapper img {
     width: 100%;
     height: 232px;
     object-fit: cover;
-    /* object-position: center; */
 }
 
 .btn-view-more {
